--- a/.github/workflows/obs-mcp-unit.yaml
+++ b/.github/workflows/obs-mcp-unit.yaml
@@ -1,4 +1,4 @@
-name: obs-mcp
+name: obs-mcp-unit
 
 on:
     push:
@@ -7,15 +7,14 @@ on:
             - main
         paths:
             - "obs-mcp/**"
-            - ".github/workflows/obs-mcp.yml"
-
+            - ".github/workflows/obs-mcp-unit.yaml"
 # To cancel running workflow when new commits pushed in a pull request
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
 
 jobs:
-    unit-tests:
+    unit:
         name: unit tests
         runs-on: ubuntu-latest
         steps:
