--- a/hack/e2e/manifests/perses-crd.yaml
+++ b/hack/e2e/manifests/perses-crd.yaml
@@ -1,9 +1,9 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.0
+    cert-manager.io/inject-ca-from: perses-operator-system/perses-operator-serving-cert
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: persesdashboards.perses.dev
 spec:
   group: perses.dev
@@ -79,8 +79,7 @@ spec:
                     type: string
                 type: object
               duration:
-                description: Duration is the default time range to use when getting
-                  data to fill the dashboard
+                description: Duration is the default time range to use when getting data to fill the dashboard
                 format: duration
                 pattern: ^(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?$
                 type: string
@@ -174,8 +173,7 @@ spec:
                   type: object
                 type: object
               refreshInterval:
-                description: RefreshInterval is the default refresh interval to use
-                  when landing on the dashboard
+                description: RefreshInterval is the default refresh interval to use when landing on the dashboard
                 format: duration
                 pattern: ^(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?$
                 type: string
@@ -183,8 +181,7 @@ spec:
                 items:
                   properties:
                     kind:
-                      description: Kind is the type of the variable. Depending on
-                        the value of Kind, it will change the content of Spec.
+                      description: Kind is the type of the variable. Depending on the value of Kind, it will change the content of Spec.
                       type: string
                     spec:
                       x-kubernetes-preserve-unknown-fields: true
@@ -203,8 +200,7 @@ spec:
             properties:
               conditions:
                 items:
-                  description: Condition contains details for one aspect of the current
-                    state of this API Resource.
+                  description: Condition contains details for one aspect of the current state of this API Resource.
                   properties:
                     lastTransitionTime:
                       description: |-
