--- a/manifests/kubernetes/01_service_account.yaml
+++ b/manifests/kubernetes/01_service_account.yaml
@@ -19,6 +19,9 @@ rules:
   - apiGroups: [""]
     resources: ["namespaces"]
     verbs: ["get", "list"]
+  - apiGroups: ["perses.dev"]
+    resources: ["persesdashboards"]
+    verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
