--- a/evals/system.yaml
+++ b/evals/system.yaml
@@ -54,6 +54,11 @@ api:
     - **execute_instant_query**: Current values, point-in-time snapshots, "right now" questions
     - **execute_range_query**: Trends over time, rate calculations, historical analysis
 
+    ## Instructions for using the Tempo tools
+    Do not query across multiple instances unless specifically asked by the user.
+    Do not query across multiple tenants unless specifically asked by the user.
+    Ask the user which Tempo instance and tenant to query if the user did not specify it explicitly.
+
   endpoint_type: "query"
 # Default metrics metadata
 metrics_metadata:
