--- a/hack/e2e/manifests/network_policy_to_access_prometheus.yaml
+++ b/hack/e2e/manifests/network_policy_to_access_prometheus.yaml
@@ -22,3 +22,28 @@ spec:
           port: 9090
         - protocol: TCP
           port: 8080
+---
+# Allow obs-mcp to access Alertmanager
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-obs-mcp-to-alertmanager
+  namespace: monitoring
+spec:
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/component: alert-router
+      app.kubernetes.io/instance: main
+      app.kubernetes.io/name: alertmanager
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: obs-mcp
+      ports:
+        - protocol: TCP
+          port: 9093
+        - protocol: TCP
+          port: 8080
